methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:3: error: Boolean does not take parameters
  if (versLAvant()) {
                ^